--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
 	<script src="js/main.js"></script>
 
 	<script>
-    var d = new Date(2025, 5, 9);;
+    var d = new Date(2025, 4, 9);
 
     // default example
     simplyCountdown('.simply-countdown-one', {
