--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+	<style>
+		.couple-half .groom img {
+		  width: 150px;
+		  height: 150px;
+		  border-radius: 50%;
+		  border: 5px solid transparent;
+		  border-right: 5px solid #ffffff;
+		  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+		}
+	  </style>
+	  
 
 	</head>
 	<body>
