--- a/index.html
+++ b/index.html
@@ -64,13 +64,22 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 	<style>
+		.couple-half .groom {
+		background-color: #fdf6f9; /* ✅ พื้นหลังสีชมพูอ่อนละมุน */
+		padding: 10px;
+		border: 2px solid #ffffff;
+		border-radius: 12px; /* มุมนิดหน่อย */
+		width: fit-content;
+		margin: 0 auto;
+		box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+		}
+
 		.couple-half .groom img {
-		  width: 150px;
-		  height: 150px;
-		  border-radius: 50%;
-		  border: 5px solid transparent;
-		  border-right: 5px solid #ffffff;
-		  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+		width: 150px;
+		height: auto;
+		border: 3px solid #ffffff; /* ✅ กรอบสีขาวรอบรูป */
+		border-radius: 6px; /* มุมเล็กน้อย */
+		display: block;
 		}
 	  </style>
 	  
