--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
-	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
+	<!-- <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet"> -->
+	<link href="https://fonts.googleapis.com/css2?family=Mitr&display=swap" rel="stylesheet">
 	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -62,27 +63,7 @@
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
-	<![endif]-->
-	<style>
-		.couple-half .groom {
-		background-color: #fdf6f9; /* ✅ พื้นหลังสีชมพูอ่อนละมุน */
-		padding: 10px;
-		border: 2px solid #ffffff;
-		border-radius: 12px; /* มุมนิดหน่อย */
-		width: fit-content;
-		margin: 0 auto;
-		box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-		}
-
-		.couple-half .groom img {
-		width: 150px;
-		height: auto;
-		border: 3px solid #ffffff; /* ✅ กรอบสีขาวรอบรูป */
-		border-radius: 6px; /* มุมเล็กน้อย */
-		display: block;
-		}
-	  </style>
-	  
+	<![endif]-->  
 
 	</head>
 	<body>
@@ -90,7 +71,7 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">
-	<nav class="fh5co-nav" role="navigation">
+	<!-- <nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-2">
@@ -124,7 +105,7 @@
 			</div>
 			
 		</div>
-	</nav>
+	</nav> -->
 
 	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/img_bg_2.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
@@ -134,7 +115,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Nui &amp; Toon</h1>
-							<h2>We Are Getting Married</h2>
+							<h2>เรากำลังจะแต่งงาน</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
 						</div>
@@ -148,9 +129,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>Hello!</h2>
-					<h3>November 28th, 2016 New York, USA</h3>
-					<p>We invited you to celebrate our wedding</p>
+					<h2>สวัสดี!</h2>
+					<h3>9 พฤษภาคม 2568</h3>
+					<p>เราขอเชิญท่านร่วมฉลองวันวิวาห์ของเรา</p>
 				</div>
 			</div>
 			<div class="couple-wrap animate-box">
