--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Nui &amp; Toon</h1>
-							<h2>เรากำลังจะแต่งงาน</h2>
+							<h2>เรากำลังจะแต่งงาน 9 พฤษภาคม 2568</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
 						</div>
