--- a/index.html
+++ b/index.html
@@ -12,20 +12,6 @@
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
 
-  <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
-
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
@@ -117,7 +103,14 @@
 							<h1>Nui &amp; Toon</h1>
 							<h2>เรากำลังจะแต่งงาน 9 พฤษภาคม 2568</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
-							<p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
+							<p>
+								<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Nui%20%26%20Toon%20Wedding&details=Join%20us%20for%20our%20special%20day!&location=Your%20Wedding%20Venue&dates=20250509T100000Z/20250509T130000Z" 
+								   target="_blank" 
+								   class="btn btn-default btn-sm">
+								  Save the date
+								</a>
+							  </p>
+							  
 						</div>
 					</div>
 				</div>
