--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
 								   class="btn btn-default btn-sm">
 								  Save the date
 								</a>
+								<a href="https://maps.app.goo.gl/ximNck4o5RRme8tK9" 
+								target="_blank" 
+								class="btn btn-primary btn-sm" 
+								style="margin-left: 10px;">
+							   Location
+							 </a>
 							  </p>
 							  
 						</div>
