--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 	<!-- <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet"> -->
 	<link href="https://fonts.googleapis.com/css2?family=Mitr&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -105,15 +107,15 @@
 							<div class="simply-countdown simply-countdown-one"></div>
 							<p>
 								<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Nui%20%26%20Toon%20Wedding&details=Join%20us%20for%20our%20special%20day!&location=Your%20Wedding%20Venue&dates=20250509T100000Z/20250509T130000Z" 
-								   target="_blank" 
-								   class="btn btn-default btn-sm">
-								  Save the date
-								</a>
-								<a href="https://maps.app.goo.gl/ximNck4o5RRme8tK9" 
+								target="_blank" 
+								class="btn btn-default btn-sm">
+							   <i class="fa-solid fa-calendar-plus"></i> Save the date
+							 </a>
+							 <a href="https://maps.app.goo.gl/ximNck4o5RRme8tK9" 
 								target="_blank" 
 								class="btn btn-primary btn-sm" 
 								style="margin-left: 10px;">
-							   Location
+							   <i class="fa-solid fa-location-dot"></i> Location
 							 </a>
 							  </p>
 							  
