--- a/index.html
+++ b/index.html
@@ -107,18 +107,17 @@
 							<div class="simply-countdown simply-countdown-one"></div>
 							<p>
 								<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Nui%20%26%20Toon%20Wedding&details=Join%20us%20for%20our%20special%20day!&location=Your%20Wedding%20Venue&dates=20250509T100000Z/20250509T130000Z" 
-								target="_blank" 
-								class="btn btn-default btn-sm">
-							   <i class="fa-solid fa-calendar-plus"></i> Save the date
-							 </a>
-							 <a href="https://maps.app.goo.gl/ximNck4o5RRme8tK9" 
-								target="_blank" 
-								class="btn btn-primary btn-sm" 
-								style="margin-left: 10px;">
-							   <i class="fa-solid fa-location-dot"></i> Location
-							 </a>
-							  </p>
-							  
+								   target="_blank" 
+								   class="btn btn-default btn-sm">
+								  <i class="fa-solid fa-calendar-plus" style="margin-right: 8px;"></i>Save the date
+								</a>
+								<a href="https://maps.app.goo.gl/ximNck4o5RRme8tK9" 
+								   target="_blank" 
+								   class="btn btn-primary btn-sm" 
+								   style="margin-left: 10px;">
+								  <i class="fa-solid fa-location-dot" style="margin-right: 8px;"></i>Location
+								</a>
+							  </p>					  
 						</div>
 					</div>
 				</div>
