--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
 		</div>
 	</div> -->
 
-	<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/img_bg_3.jpg);">
+	<!-- <div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/img_bg_3.jpg);"> -->
+		<div id="fh5co-event" class="fh5co-bg" style="background-color: white;">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<span>Our Special Events</span>
 					<h2>Wedding Events</h2>
 				</div>
 			</div>
@@ -171,20 +171,26 @@
 				<div class="display-t">
 					<div class="display-tc">
 						<div class="col-md-10 col-md-offset-1">
-							<div class="col-md-6 col-sm-6 text-center">
+							<div class="col-md-6 col-sm-6">
 								<div class="event-wrap animate-box">
-									<h3>Main Ceremony</h3>
+									<h2 class="text-center">พิธีหลัก</h2>
 									<div class="event-col">
+									<div class="event-inline">
 										<i class="icon-clock"></i>
-										<span>4:00 PM</span>
-										<span>6:00 PM</span>
+										<span>06.00 น.</span>
 									</div>
-									<div class="event-col">
-										<i class="icon-calendar"></i>
-										<span>Monday 28</span>
-										<span>November, 2016</span>
-									</div>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									  <div class="event-inline">
+										<i class="icon-clock"></i>
+										<span>09.19 น.</span>
+									  </div>
+									  <div class="event-inline">
+										<i class="icon-clock"></i>
+										<span>10.19 น.</span>
+									  </div>
+									</div>									
+									<span>พิธีสงฆ์</span>
+									<span>พิธีแห่ขันหมาก</span>
+									<span>พิธีหลั่งน้ำพระพุทธมนต์</span>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
