--- a/index.html
+++ b/index.html
@@ -187,10 +187,14 @@
 										<i class="icon-clock"></i>
 										<span>10.19 น.</span>
 									  </div>
-									</div>									
+									</div>	
+									<div class="event-inline">							
 									<span>พิธีสงฆ์</span>
-									<span>พิธีแห่ขันหมาก</span>
-									<span>พิธีหลั่งน้ำพระพุทธมนต์</span>
+								</div>	
+									<div class="event-inline"> <span>พิธีแห่ขันหมาก</span>	
+								</div>	
+								<div class="event-inline"> 	
+									<span>พิธีหลั่งน้ำพระพุทธมนต์</span></div>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
