--- a/index.html
+++ b/index.html
@@ -177,24 +177,19 @@
 									<div class="event-col">
 									<div class="event-inline">
 										<i class="icon-clock"></i>
-										<span>06.00 น.</span>
+										<span class="event-time">06.00 น.</span>
+										<span class="event-name">พิธีสงฆ์</span>
 									</div>
 									  <div class="event-inline">
 										<i class="icon-clock"></i>
-										<span>09.19 น.</span>
+										<span class="event-time">09.19 น.</span>
+										<span class="event-name">พิธีแห่ขันหมาก</span>
 									  </div>
 									  <div class="event-inline">
 										<i class="icon-clock"></i>
-										<span>10.19 น.</span>
+										<span>10.19 น.      พิธีหลั่งน้ำพระพุทธมนต์</span>
 									  </div>
 									</div>	
-									<div class="event-inline">							
-									<span>พิธีสงฆ์</span>
-								</div>	
-									<div class="event-inline"> <span>พิธีแห่ขันหมาก</span>	
-								</div>	
-								<div class="event-inline"> 	
-									<span>พิธีหลั่งน้ำพระพุทธมนต์</span></div>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
