--- a/index.html
+++ b/index.html
@@ -174,7 +174,6 @@
 							<div class="col-md-6 col-sm-6">
 								<div class="event-wrap animate-box">
 									<h2 class="text-center">พิธีหลัก</h2>
-									<div class="event-col">
 									<div class="event-inline">
 										<i class="icon-clock"></i>
 										<span class="event-time">06.00 น.</span>
@@ -187,10 +186,10 @@
 									  </div>
 									  <div class="event-inline">
 										<i class="icon-clock"></i>
-										<span>10.19 น.      พิธีหลั่งน้ำพระพุทธมนต์</span>
+										<span class="event-time">10.19 น.</span>
+										<span class="event-name">พิธีหลั่งน้ำพระพุทธมนต์</span>
 									  </div>
 									</div>	
-								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
