--- a/index.html
+++ b/index.html
@@ -111,12 +111,6 @@
 								   class="btn btn-default btn-sm">
 								  <i class="fa-solid fa-calendar-plus" style="margin-right: 8px;"></i>Save the date
 								</a>
-								<a href="https://maps.app.goo.gl/ximNck4o5RRme8tK9" 
-								   target="_blank" 
-								   class="btn btn-primary btn-sm" 
-								   style="margin-left: 10px;">
-								  <i class="fa-solid fa-location-dot" style="margin-right: 8px;"></i>Location
-								</a>
 							  </p>					  
 						</div>
 					</div>
@@ -170,10 +164,10 @@
 			<div class="row">
 				<div class="display-t">
 					<div class="display-tc">
-						<div class="col-md-10 col-md-offset-1">
+						<!-- <div class="col-md-10 col-md-offset-1"> -->
 							<div class="col-md-6 col-sm-6">
 								<div class="event-wrap animate-box">
-									<h2 class="text-center">พิธีหลัก</h2>
+									<h2 class="text-center">งานเช้า</h2>
 									<div class="event-inline">
 										<i class="icon-clock"></i>
 										<span class="event-time">06.00 น.</span>
@@ -189,24 +183,41 @@
 										<span class="event-time">10.19 น.</span>
 										<span class="event-name">พิธีหลั่งน้ำพระพุทธมนต์</span>
 									  </div>
-									</div>	
-							</div>
-							<div class="col-md-6 col-sm-6 text-center">
-								<div class="event-wrap animate-box">
-									<h3>Wedding Party</h3>
-									<div class="event-col">
+									  <div class="event-inline">
 										<i class="icon-clock"></i>
-										<span>7:00 PM</span>
-										<span>12:00 AM</span>
-									</div>
-									<div class="event-col">
-										<i class="icon-calendar"></i>
-										<span>Monday 28</span>
-										<span>November, 2016</span>
-									</div>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-								</div>
+										<span class="event-time">12.00 น.</span>
+										<span class="event-name">รับประทานอาหาร (โต๊ะจีน)</span>
+									  </div>
+									  <div class="text-center" style="margin-top: 12px;">
+										<a href="https://maps.app.goo.gl/d17K1XrZ5S4je7S28" 
+										   target="_blank" 
+										   class="btn btn-primary btn-sm"  
+										   style="margin-left: 10px;">
+										   
+										  <i class="fa-solid fa-location-dot" style="margin-right: 8px; color: white;"></i>Location
+										</a>
+									  </div>
+								</div>	
 							</div>
+							<div class="col-md-6 col-sm-6">
+							<div class="event-wrap animate-box">
+								<h2 class="text-center">งานเย็น</h2>
+								<div class="event-inline">
+									<i class="icon-clock"></i>
+									<span class="event-time">17.00 น.</span>
+									<span class="event-name">งานเลี้ยง</span>
+								</div>
+								  <div class="text-center" style="margin-top: 12px;">
+									<a href="https://maps.app.goo.gl/ximNck4o5RRme8tK9" 
+									   target="_blank" 
+									   class="btn btn-primary btn-sm"  
+									   style="margin-left: 10px;">
+									   
+									  <i class="fa-solid fa-location-dot" style="margin-right: 8px; color: white;"></i>Location
+									</a>
+								  </div>
+							</div>	
+						<!-- </div> -->
 						</div>
 					</div>
 				</div>
@@ -474,7 +485,7 @@
 	</div>
 
 
-	<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">
+	<!-- <div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row animate-box">
@@ -505,9 +516,9 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
-	<footer id="fh5co-footer" role="contentinfo">
+	<!-- <footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
 
 			<div class="row copyright">
@@ -528,7 +539,7 @@
 			</div>
 
 		</div>
-	</footer>
+	</footer> -->
 	</div>
 
 	<div class="gototop js-top">
