--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
 									  </div>
 									  <div class="event-inline">
 										<i class="icon-clock"></i>
-										<span class="event-time">12.00 น.</span>
-										<span class="event-name">รับประทานอาหาร (โต๊ะจีน)</span>
+										<span class="event-time">11.30 น.</span>
+										<span class="event-name">ฉลองมงคลสมรส (โต๊ะจีน)</span>
 									  </div>
 									  <div class="text-center" style="margin-top: 12px;">
 										<a href="https://maps.app.goo.gl/d17K1XrZ5S4je7S28" 
