--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Nui &amp; Toon</h1>
-							<h2>เรากำลังจะแต่งงาน 9 พฤษภาคม 2568</h2>
+							<h2>9 พฤษภาคม 2568</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<p>
 								<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Nui%20%26%20Toon%20Wedding&details=Join%20us%20for%20our%20special%20day!&location=Your%20Wedding%20Venue&dates=20250509T100000Z/20250509T130000Z" 
