--- a/index.html
+++ b/index.html
@@ -173,9 +173,11 @@
 			  </div>
 			  
 			<div class="row">
-				<div class="display-t">
+				<div class="text-center animate-box">
+				<img src="images/sc.png" width="380">
+			</div>
+				<!-- <div class="display-t">
 					<div class="display-tc">
-						<!-- <div class="col-md-10 col-md-offset-1"> -->
 							<div class="col-md-6 col-sm-6">
 								<div class="event-wrap animate-box">
 									<h2 class="text-center">งานเช้า</h2>
@@ -228,10 +230,9 @@
 									</a>
 								  </div>
 							</div>	
-						<!-- </div> -->
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
