--- a/index.html
+++ b/index.html
@@ -119,39 +119,6 @@
 		</div>
 	</header>
 
-	<!-- <div id="fh5co-couple">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>สวัสดี!</h2>
-					<h3>9 พฤษภาคม 2568</h3>
-					<p>เราขอเชิญท่านร่วมฉลองวันวิวาห์ของเรา</p>
-				</div>
-			</div>
-			<div class="couple-wrap animate-box">
-				<div class="couple-half">
-					<div class="groom">
-						<img src="images/groom.jpg" alt="groom" class="img-responsive">
-					</div>
-					<div class="desc-groom">
-						<h3>Joefrey Mahusay</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
-					</div>
-				</div>
-				<p class="heart text-center"><i class="icon-heart2"></i></p>
-				<div class="couple-half">
-					<div class="bride">
-						<img src="images/bride.jpg" alt="groom" class="img-responsive">
-					</div>
-					<div class="desc-bride">
-						<h3>Sheila Mahusay</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div> -->
-
 	<!-- <div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/img_bg_3.jpg);"> -->
 		<div id="fh5co-event" class="fh5co-bg" style="background-color: white;">
 		<div class="overlay"></div>
@@ -170,8 +137,35 @@
 				  <h4>นายสุทธิชัย รังสิยาวรานนท์</h4>
 				  <h4>นางภาวนา รังสิยาวรานนท์</h4>
 				</div>
+				<p>ขอเชิญท่านร่วมฉลองมงคลสมรสระหว่าง</p>
 			  </div>
-			  
+
+			  <div id="fh5co-couple">
+				<div class="container">
+					<div class="couple-wrap animate-box">
+						<div class="couple-half">
+							<div class="bride">
+								<img src="images/groom.png" alt="groom" class="img-responsive">
+							</div>
+							<div class="desc-bride">
+								<h3>Sheila Mahusay</h3>
+								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+							</div>
+						</div>
+
+						<p class="heart text-center"><i class="icon-heart2"></i></p>
+						<div class="couple-half">
+							<div class="bride">
+								<img src="images/bride.png" alt="groom" class="img-responsive">
+							</div>
+							<div class="desc-bride">
+								<h3>Sheila Mahusay</h3>
+								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 			<div class="row">
 				<div class="text-center animate-box">
 				<img src="images/sc.png" width="380">
