--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 				   class="btn btn-primary btn-sm"  
 				   style="margin-left: 10px;">
 				   
-				  <i class="fa-solid fa-location-dot" style="margin-right: 8px; color: white;"></i>Location งานเช้า (สมุทรสาคร)
+				  <i class="fa-solid fa-location-dot" style="margin-right: 8px; color: white;"></i>สถานที่ งานเช้า (สมุทรสาคร)
 				</a>
 			  </div>
 			  <div class="text-center" style="margin-top: 12px;">
@@ -211,7 +211,7 @@
 				   class="btn btn-primary btn-sm"  
 				   style="margin-left: 10px;">
 				   
-				  <i class="fa-solid fa-location-dot" style="margin-right: 8px; color: white;"></i>Location งานเย็น (สมุทรสงคราม)
+				  <i class="fa-solid fa-location-dot" style="margin-right: 8px; color: white;"></i>สถานที่ งานเย็น (สมุทรสงคราม)
 				</a>
 			  </div>
             </div>
@@ -654,7 +654,7 @@
     <script src="js/simplyCountdown.js"></script>
     <!-- Main -->
     <script src="js/main.js"></script>
-
+	  
     <script>
       var d = new Date(2025, 4, 9, 0, 0, 0);
 
