--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       >
         <div class="overlay"></div>
         <div class="container text-center">
-          <div class="row animate-box">			  
+          <div class="row">			  
             <div class="col-md-12">
               <h4>ผู้ใหญ่สมคิด เทียนซ้อน และ นางประทุม เทียนซ้อน</h4>
               <h4>นายสุทธิชัย รังสิยาวรานนท์ และ นางภาวนา รังสิยาวรานนท์</h4>
