--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       >
         <div class="overlay"></div>
         <div class="container text-center">
-          <div class="row">			  
+          <div class="row">
             <div class="col-md-12">
               <h4>ผู้ใหญ่สมคิด เทียนซ้อน และ นางประทุม เทียนซ้อน</h4>
               <h4>นายสุทธิชัย รังสิยาวรานนท์ และ นางภาวนา รังสิยาวรานนท์</h4>
@@ -277,7 +277,10 @@
                   >สถานที่ งานเช้า (สมุทรสาคร)
                 </a>
               </div>
-              <div class="text-center" style="margin-top: 12px; margin-bottom: 20px">
+              <div
+                class="text-center"
+                style="margin-top: 12px; margin-bottom: 20px"
+              >
                 <a
                   href="https://maps.app.goo.gl/ximNck4o5RRme8tK9"
                   target="_blank"
@@ -590,38 +593,41 @@
 		</div>
 	</div> -->
 
-      <!-- <div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Are You Attending?</h2>
-					<p>Please Fill-up the form to notify you that you're attending. Thanks.</p>
-				</div>
-			</div>
-			<div class="row animate-box">
-				<div class="col-md-10 col-md-offset-1">
-					<form class="form-inline">
-						<div class="col-md-4 col-sm-4">
-							<div class="form-group">
-								<label for="name" class="sr-only">Name</label>
-								<input type="name" class="form-control" id="name" placeholder="Name">
-							</div>
-						</div>
-						<div class="col-md-4 col-sm-4">
-							<div class="form-group">
-								<label for="email" class="sr-only">Email</label>
-								<input type="email" class="form-control" id="email" placeholder="Email">
-							</div>
-						</div>
-						<div class="col-md-4 col-sm-4">
-							<button type="submit" class="btn btn-default btn-block">I am Attending</button>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div> -->
+      <div
+        id="fh5co-started"
+        class="fh5co-bg"
+        style="background-image: url(images/img_bg_4.jpg); position: relative"
+      >
+        <!-- พื้นหลังมืดซ้อนทับ -->
+        <div class="overlay"></div>
+
+        <div class="container">
+          <!-- ข้อความพาดหัว -->
+          <div class="row animate-box">
+            <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+              <h4 style="color: #fff">
+                ฝากความรักและคำอวยพรไว้ในคลิกเดียว 🤍 PromptPay
+                พร้อมรับทุกความยินดี
+              </h4>
+            </div>
+          </div>
+
+          <!-- แถวสำหรับรูป QR -->
+          <div class="row animate-box">
+            <div class="col-md-6 col-md-offset-3 text-center qr-wrapper">
+              <!-- กดที่รูปเพื่อเปิดไฟล์ใหญ่ในแท็บใหม่ -->
+              <a href="images/qr.jpg" target="_blank">
+                <img
+                  src="images/qr.jpg"
+                  alt="PromptPay QR"
+                  class="img-responsive center-block"
+                  style="max-width: 280px"
+                />
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <!-- <footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
