--- a/index.html
+++ b/index.html
@@ -593,22 +593,13 @@
 		</div>
 	</div> -->
 
-      <div
-        id="fh5co-started"
-        class="fh5co-bg"
-        style="background-image: url(images/img_bg_4.jpg); position: relative"
-      >
-        <!-- พื้นหลังมืดซ้อนทับ -->
-        <div class="overlay"></div>
-
+      <div id="fh5co-started" class="fh5co-bg">
         <div class="container">
           <!-- ข้อความพาดหัว -->
           <div class="row animate-box">
             <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-              <h4 style="color: #fff">
-                ฝากความรักและคำอวยพรไว้ในคลิกเดียว 🤍 PromptPay
-                พร้อมรับทุกความยินดี
-              </h4>
+              <h4>ฝากความรักและคำอวยพรไว้ในคลิกเดียว</h4>
+              <h4>❤️ PromptPay พร้อมรับทุกความยินดี</h4>
             </div>
           </div>
 
