--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             </div>
           </div>
 
-          <div class="row">
+          <div id="wedding-location" class="row">
             <div class="text-center animate-box">
               <img src="images/sc.png" width="380" />
               <div class="text-center" style="margin-top: 12px">
@@ -264,7 +264,7 @@
             </div>
           </div>
 
-          <div class="row">
+          <div id="wedding-location" class="row">
             <div class="text-center animate-box">
               <img src="images/sc.png" width="380" />
               <div class="text-center" style="margin-top: 12px">
@@ -549,7 +549,7 @@
       <a href="#fh5co-header" class="nav-item">
         <i class="fa-solid fa-house"></i><span>หน้าแรก</span>
       </a>
-      <a href="#fh5co-event" class="nav-item">
+      <a href="#wedding-location" class="nav-item">
         <i class="fa-solid fa-location-dot"></i><span>สถานที่</span>
       </a>
       <a href="#fh5co-started" class="nav-item">
